--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,14 @@
         "typeinfo": "cpp",
         "unordered_map": "cpp",
         "utility": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "*.tcc": "cpp",
+        "clocale": "cpp",
+        "deque": "cpp",
+        "memory_resource": "cpp",
+        "fstream": "cpp",
+        "condition_variable": "cpp",
+        "future": "cpp",
+        "thread": "cpp"
     }
 }
